<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/o"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="604dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/app_name_size" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="89dp" />

        <EditText
            android:id="@+id/emailboxLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_password"
            android:textColor="@android:color/black"
            android:textColorHint="@color/red" />

        <EditText
            android:id="@+id/passwordboxLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/edit_text_phone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/red" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/colorButtonTransparent"
            android:textColorHighlight="@android:color/transparent"
            android:textColorHint="@color/colorButtonTransparent" />

        <Button
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:backgroundTint="@android:color/transparent"
            android:text="Forgot your password?" />

        <Button
            android:id="@+id/returnLoginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="Return"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.334"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522" />

        <Space
            android:layout_width="322dp"
            android:layout_height="145dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="330dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>